Some updates for a broken world

--- a/src/pages/report/report.html
+++ b/src/pages/report/report.html
@@ -45,7 +45,7 @@
       <ion-list *ngIf="type==='Training'">
         <ion-item>
           <ion-label>Training</ion-label>
-          <ion-select formControlName='trnType'>
+          <ion-select formControlName='training_type'>
               <ion-option *ngFor='let trngType of selTrainingType' [value]='trngType'>{{trngType}}</ion-option>
           </ion-select>
         </ion-item>
@@ -62,11 +62,11 @@
         </ion-item>
         <ion-item>
           <ion-label floating>{{'unit_number' | translate}}</ion-label>
-          <ion-input type='text' formControlName='uNum'></ion-input>
+          <ion-input type='text' formControlName='unit_number'></ion-input>
         </ion-item>
         <ion-item>
           <ion-label floating>{{'work_order_number' | translate}}</ion-label>
-          <ion-input type='text' formControlName='wONum'></ion-input>
+          <ion-input type='text' formControlName='work_order_number'></ion-input>
         </ion-item>
         <ion-item>
           <ion-label floating>{{'job_notes' | translate}}</ion-label>
