--- a/src/pages/report/report.html
+++ b/src/pages/report/report.html
@@ -73,11 +73,11 @@
         </ion-item>
         <ion-item>
           <ion-label floating>{{'unit_number' | translate}}</ion-label>
-          <ion-input type='text' formControlName='uNum'></ion-input>
+          <ion-input type='text' formControlName='unit_number'></ion-input>
         </ion-item>
         <ion-item>
           <ion-label floating>{{'work_order_number' | translate}}</ion-label>
-          <ion-input type='text' formControlName='wONum'></ion-input>
+          <ion-input type='text' formControlName='work_order_number'></ion-input>
         </ion-item>
         <ion-item>
           <ion-label floating>{{'job_notes' | translate}}</ion-label>
