--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -21,7 +21,7 @@
 <ion-content padding [ngStyle]="{'margin-top': fixedHeight}">
   <p class="home-welcome">{{ud.getTechName()}}</p>
   <p class="home-date">{{today.format('dddd MMM DD YYYY')}} </p>
-  <ion-card class="shift-summary" *ngIf="dataReady">
+  <ion-card no-lines class="shift-summary" *ngIf="dataReady">
     <ion-card-header class="home-card-header-payroll-period">
       <ion-item class="home-card-header-payroll-period-label-item">
         <ion-label class="home-card-header-payroll-period-label-label">{{'payroll_period' | translate}}</ion-label>
@@ -32,7 +32,7 @@
         </ion-select>
       </ion-item>
     </ion-card-header>
-    <ion-list no-border>
+    <ion-list no-lines no-border>
       <ion-item class="ion-item-button-like"  *ngFor="let shift of period.shifts; let i=index" (click)="showShiftReports(shift)">
         <ion-icon class="shft-num-icon">{{numChars[shift.shift_number]}}</ion-icon>
         <span class="shift-text">{{shift.getNormalHours()}}&nbsp;/&nbsp;{{shift.getShiftLength()}} &nbsp;Hrs. &nbsp;&nbsp;</span>
@@ -40,16 +40,34 @@
         <ion-icon item-end class="chk-box-icon" [ngClass]="shift.getShiftStatus()" [innerHTML]="getCheckboxSVG(shift) | safe: 'html'" (click)="possibleSound(shift)"></ion-icon>
       </ion-item>
       <ion-list-header class="blank-list-header" ></ion-list-header>
-      <ion-list-header>
+      <ion-list-header class="home-hours-submitted">
         {{"home_hours_submitted_for_payroll_period" | translate}}:
         <ion-note item-end>
           {{ period.getNormalHours() }}
         </ion-note>
       </ion-list-header>
-      <ion-list-header>
-        {{"home_payroll_hours_submitted" | translate}} :
+      <ion-list-header class="home-hours-extended">
+        {{"extended_hours" | translate}} :
         <ion-note item-end>
-          {{ period.getPayrollHours() }}
+          {{ period.getBonusHours() }}
+        </ion-note>
+      </ion-list-header>
+      <ion-list-header class="home-hours-training">
+        {{"training_hours" | translate}} :
+        <ion-note item-end>
+          {{ period.getTrainingHours() }}
+        </ion-note>
+      </ion-list-header>
+      <ion-list-header class="home-hours-travel">
+        {{"travel_hours" | translate}} :
+        <ion-note item-end>
+          {{ period.getTravelHours() }}
+        </ion-note>
+      </ion-list-header>
+      <ion-list-header class="home-hours-total">
+        {{"total_payroll_hours" | translate}} :
+        <ion-note item-end>
+          {{ period.getTotalHours() }}
         </ion-note>
       </ion-list-header>
     </ion-list>
